# pydentity

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  alembic.ini  pyproject.toml
.claude/rules/: auth-bounded-contexts.md  auth-context-map.md  auth-ddd-deep-dive.md  auth-event-storming.md  auth-strategic-design.md  auth-tactical-audit-notification.md  auth-tactical-design.md  auth-ubiquitous-language.md  clean_code.md  ddd_rules.md  python_rules.md  refactoring.md
.claude/skills/: READING_ORDER.md
.claude/skills/architecture-decisions/: SKILL.md
.claude/skills/clean-code/: SKILL.md
.claude/skills/ddd-planning/: SKILL.md
.claude/skills/design-patterns/: SKILL.md
.claude/skills/domain-driven-design/: SKILL.md
.claude/skills/modern-python/: SKILL.md
.claude/skills/python-testing/: SKILL.md
.claude/skills/refactoring/: SKILL.md
.claude/skills/solid-principles/: SKILL.md
.continue/: config.yaml
.devcontainer/: devcontainer.json  docker-compose.yml
.githooks/: pre-commit
.github/workflows/: ci.yml  docker-publish.yml
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
docs/diagrams/: class_diagram.puml
docs/diagrams/uml/audit/: audit_entry.puml
docs/diagrams/uml/authentication/: account.puml  device.puml  session.puml  verification.puml
docs/diagrams/uml/notification/: delivery_request.puml
docs/diagrams/uml/shared_kernel/: building_blocks.puml  shared_kernel.puml
docs/domain/: event-storming.md  strategic-design.md  tactical-design.md  ubiquitous-language.md
migrations/: env.py  script.py.mako
migrations/versions/: 20260307_189ae4c62f01_initial.py  20260307_1a15fbf691dc_initial_schema.py  20260308_2d29e7a25a1f_device_fingerprint_unique_per_user.py  20260310_0f51e1b3e658_audit_trail.py  20260311_lowercase_roles_permissions.py  20260311_remove_role_domain_id.py  20260313_bbfd7c09ee6f_.py  20260314_431ac8167e43_server_generated_device_id.py  20260314_add_ix_sessions_refresh_token_hash.py  20260317_b506ca0dbce6_.py  20260326_b62c7a879fd1_initial.py  3ee235719a9e_create_accounts_and_refresh_tokens_.py
src/pydentity/: __init__.py  __main__.py  main.py
src/pydentity/adapters/: __init__.py  container.py
src/pydentity/adapters/config/: app.py  base.py  enums.py  fastapi.py  logging.py  middleware.py  permissions.py  postgres.py  redis.py  security.py  smtp.py  super_admin.py
src/pydentity/adapters/outbound/: __init__.py  composite_audit_trail.py  in_memory_event_publisher.py  in_process_event_publisher.py  json_logger.py  log_audit.py  log_audit_trail.py  log_notification.py  redis_rate_limit_store.py  rich_console_logger.py  smtp_notification.py
src/pydentity/application/: __init__.py
src/pydentity/application/account/: dtos.py  services.py
src/pydentity/application/audit/: registry.py
src/pydentity/application/auth/: dtos.py  services.py
src/pydentity/application/dtos/: __init__.py  account.py  auth.py  email.py  password.py  role.py
src/pydentity/application/event_handlers/: __init__.py  _revoke_sessions.py  base.py  handlers.py  revoke_sessions_on_deactivation.py  revoke_sessions_on_password_reset.py  revoke_sessions_on_suspension.py  send_welcome_email_on_registration.py
src/pydentity/application/exceptions/: __init__.py  app.py
src/pydentity/application/models/: __init__.py  access_token_claims.py  jwk.py
src/pydentity/application/ports/: __init__.py  audit_log.py  audit_trail.py  event_publisher.py  jwk_key_store.py  logger.py  notification.py  rate_limit_store.py  token_signer.py  token_verifier.py
src/pydentity/application/services/: __init__.py  access_token_service.py  assemble_token_claims.py  clock.py  event_publisher.py  id_generator.py  token_generator.py  token_hasher.py  unit_of_work.py
src/pydentity/application/use_cases/: __init__.py
src/pydentity/audit/: CLAUDE.md
src/pydentity/authentication/: CLAUDE.md
src/pydentity/domain/account/: aggregate.py  aggregate_id.py  errors.py  events.py  factory.py  repository.py  value_objects.py
src/pydentity/domain/base/: __init__.py  aggregate_root.py  domain_event.py  entity.py
src/pydentity/domain/events/: base.py  (+4 more)
src/pydentity/infrastructure/: container.py  database.py  settings.py
src/pydentity/notification/: CLAUDE.md
src/pydentity/shared_kernel/: CLAUDE.md  __init__.py  aggregate_ids.py  building_blocks.py  guards.py  value_objects.py
tests/: conftest.py  test_main.py  test_placeholder.py
tests/shared_kernel/: test_aggregate_ids.py  test_building_blocks.py  test_guards.py  test_value_objects.py
(+255 files in other folders)
