[project]
name = "pydentity"
version = "0.1.0"
description = "A Python microservice for managing authentication and identity verification."
authors = [{ name = "AymanKastali" }]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.13.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.0",
    "aiosmtplib>=3.0.0",
    "redis[hiredis]>=5.0.0",
    "email-validator>=2.0.0",
    "pydantic-settings>=2.13.1",
    "rich>=13.0.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "sqlmodel>=0.0.37",
    "python-ulid>=3.0.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.12.5",
    "pyjwt[crypto]>=2.11.0",
    "ua-parser>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pydentity"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.coverage.run]
data_file = ".pytest_cache/.coverage"

[tool.ruff]
target-version = "py314"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TC"]

[tool.ruff.lint.per-file-ignores]
"src/pydentity/adapters/inbound/api/routes/*.py" = ["B008", "TC001"]

[tool.mypy]
python_version = "3.14"
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "debugpy>=1.8.0",
    "codespell>=2.3.0",
    "pre-commit>=3.7.0",
    "watchfiles>=1.1.1",
]
